walked through classwork

--- a/problem3_cw.html
+++ b/problem3_cw.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Tic-Tac-Toe Board Challenge</title>
+	<link rel="stylesheet" href="problem3.css">
 </head>
 <body>
 
@@ -9,21 +10,21 @@
 
 <table>
 	<tr>
-		<td>X</td>
-		<td></td>
-		<td></td>
+		<td id="top-left">X</td>
+		<td id="top-middle"></td>
+		<td id="top-right"></td>
 	</tr>
 
 	<tr>
-		<td></td>
-		<td>X</td>
-		<td></td>
+		<td id="center-left"></td>
+		<td id="center-middle">X</td>
+		<td id="center-right"></td>
 	</tr>
 
 	<tr>
-		<td></td>
-		<td></td>
-		<td>X</td>
+		<td id="bottom-left"></td>
+		<td id="bottom-center"></td>
+		<td id="botttom-right">X</td>
 	</tr>
 </table>
 
